deployment/webserver/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aion-k8s-webserver
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aion-k8s-webserver
                port:
                  number: 80
